added anion, latin, polyatomic, other modifications, especially ionid.js

--- a/public/anion.html
+++ b/public/anion.html
@@ -11,7 +11,7 @@
     </style>	
 </head>
 <body>
-	A cation is an ion with a positive charge.
+	An anion is an ion with a negative charge.
 </body>
 </html>
 
