--- a/public/monoatomic.html
+++ b/public/monoatomic.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Monoatomic Ion</title>
+    <style>
+    	body {
+    		font-size:18pt;
+    		font-family:Arial;
+    	}
+    </style>
 </head>
 <body>
 	A monoatomic ion is an ion that is composed of a single atom of a single element.
